release/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sowrabh-frontend-ingress
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: http
    appgw.ingress.kubernetes.io/health-probe-path: /_healthz
    appgw.ingress.kubernetes.io/request-timeout: "30"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /setCurrency
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /logout
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /robots.txt
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /_healthz
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
