release/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sowrabh-frontend-route
spec:
  parentRefs:
    - name: sowrabh-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /product
        - path:
            type: PathPrefix
            value: /cart
        - path:
            type: PathPrefix
            value: /static
        - path:
            type: Exact
            value: /setCurrency
        - path:
            type: Exact
            value: /logout
        - path:
            type: Exact
            value: /robots.txt
        - path:
            type: Exact
            value: /_healthz
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
